; ModuleID = '/home/carl/AnghaBench/freebsd/sys/riscv/riscv/extr_intr_machdep.c_riscv_mask_irq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/riscv/riscv/extr_intr_machdep.c_riscv_mask_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sie = common dso_local global i32 0, align 4
@SIE_STIE = common dso_local global i32 0, align 4
@SIE_USIE = common dso_local global i32 0, align 4
@SIE_SSIE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"Unknown irq %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @riscv_mask_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @riscv_mask_irq(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = ptrtoint i8* %4 to i64
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  switch i64 %6, label %19 [
    i64 128, label %7
    i64 129, label %11
    i64 130, label %15
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @sie, align 4
  %9 = load i32, i32* @SIE_STIE, align 4
  %10 = call i32 @csr_clear(i32 %8, i32 %9)
  br label %22

11:                                               ; preds = %1
  %12 = load i32, i32* @sie, align 4
  %13 = load i32, i32* @SIE_USIE, align 4
  %14 = call i32 @csr_clear(i32 %12, i32 %13)
  br label %22

15:                                               ; preds = %1
  %16 = load i32, i32* @sie, align 4
  %17 = load i32, i32* @SIE_SSIE, align 4
  %18 = call i32 @csr_clear(i32 %16, i32 %17)
  br label %22

19:                                               ; preds = %1
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @panic(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %20)
  br label %22

22:                                               ; preds = %19, %15, %11, %7
  ret void
}

declare dso_local i32 @csr_clear(i32, i32) #1

declare dso_local i32 @panic(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
